test_errors.txt
    Blocking waiting for file lock on build directory
   Compiling neura_qbft_core v0.1.0 (/home/peastew/src/neura-reth/crates/neura-qbft)
error[E0432]: unresolved import `k256::ecdsa::recoverable`
   --> crates/neura-qbft/src/validation/commit_validator.rs:108:22
    |
108 |     use k256::ecdsa::recoverable::Signature as RecoverableK256Signature; // Attempt this import path again
    |                      ^^^^^^^^^^^ could not find `recoverable` in `ecdsa`

error[E0599]: no method named `try_sign_prehashed_recoverable` found for reference `&ecdsa::verifying::VerifyingKey<Secp256k1>` in the current scope
   --> crates/neura-qbft/src/validation/commit_validator.rs:123:75
    |
123 | ... = seal_signer_key.as_ref().try_sign_prehashed_recoverable(digest.as_slice()).expect("Failed to sign digest recoverably");
    |                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ method not found in `&VerifyingKey<Secp256k1>`

error[E0599]: no method named `try_sign_prehashed_recoverable` found for reference `&ecdsa::signing::SigningKey<Secp256k1>` in the current scope
   --> crates/neura-qbft/src/validation/commit_validator.rs:434:92
    |
434 | ...   let k256_sig_over_different_digest: RecoverableK256Signature = author_key.as_ref().try_sign_prehashed_recoverable(different_digest_...
    |                                                                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |
help: there is a method `sign_prehash_recoverable` with a similar name
    |
434 -         let k256_sig_over_different_digest: RecoverableK256Signature = author_key.as_ref().try_sign_prehashed_recoverable(different_digest_for_seal.as_slice()).expect("Failed to sign different digest recoverably"); 
434 +         let k256_sig_over_different_digest: RecoverableK256Signature = author_key.as_ref().sign_prehash_recoverable(different_digest_for_seal.as_slice()).expect("Failed to sign different digest recoverably"); 
    |

Some errors have detailed explanations: E0432, E0599.
For more information about an error, try `rustc --explain E0432`.
error: could not compile `neura_qbft_core` (lib test) due to 3 previous errors
